<resources>
    <string name="app_name">Nhạc Của Zing</string>
    <string name="home_minibar_test_name_song">Chinh Em</string>
    <string name="home_minibar_test_name_author">Luong Bang Quang</string>
    <string name="loading_description_background">Loading Background</string>
    <string name="loading_decription_logo">Loading Logo</string>
    <string name="loading_name_app">NhacCuaZing</string>
    <string name="loading_progress1">Loading Progress 1</string>
    <string name="loading_progress2">Loading Progress 2</string>
    <string name="loading_progress3">Loading Progress 3</string>
    <string name="loading_progress4">Loading Progress 4</string>
    <string name="notification_test_name_singer">Son Tung MTP</string>
    <string name="notification_test_name_song">Con mua ngang qua</string>
    <string name="home_drawerlayout_text_Login">Đăng Nhập</string>
    <string name="home_drawerlayout_wifi">Chỉ đồng bộ qua wifi</string>
    <string name="home_drawerlayout_time_off">Hẹn giờ</string>
    <string name="home_drawerlayout_theme">Theme</string>
    <string name="home_drawerlayout_app_review">Đánh giá ứng dụng</string>
    <string name="home_drawerlayout_app_infomation">Thông tin ứng dụng</string>
    <string name="home_drawerlayout_more_app">Ứng dụng khác</string>
    <string name="home_drawerlayout_help">Hướng dẫn và hỗ trợ</string>
    <string name="home_drawerlayout_setting">Cài đặt</string>
    <string name="minibar_item_text_playlist">playlist</string>
    <string name="minibar_textview_edit">Chỉnh sửa</string>
    <string name="minibar_textview_complete">Hoàn Thành</string>
    <string name="minibar_text_create">Tạo mới</string>
    <string name="minibar_text_random_music">Nghe ngẫu nhiên</string>
    <string name="minibar_text_num_of_song">bài hát</string>
    <string name="toolbar_text_libary">Thư viện nhạc</string>
    <string name="toolbar_button_cancel">Huỷ</string>
    <string name="toolbar_text_hint_search">Nhập tên bài hát, nghệ sĩ, album</string>
    <string name="minibar_time_default">00:00</string>
    <string name="home_text_offline">Offline</string>
    <string name="home_button_text_library">Thư viện nhạc</string>
    <string name="library_text_songs">Bài hát</string>
    <string name="library_text_playlist">Playlist</string>
    <string name="library_text_singer">Nghệ sĩ</string>
    <string name="library_text_album">Album</string>
    <string name="toolbar_text_choice">Thao tác</string>
    <string name="playlist_choice_text_add">Thêm vào</string>
    <string name="playlistchoice_text_add_all">Chọn tất cả</string>
    <string name="playlist_choice_remove_add_all">Bỏ chọn tất cả</string>
    <string name="dialog_text_name">Tạo mới playlist</string>
    <string name="dialog_editext_hint">Tên playlist</string>
    <string name="dialog_button_text_cancel">Huỷ</string>
    <string name="dialog_button_text_create">Tạo mới</string>
    <string name="dialog_timer_start">Bắt đầu tính giờ</string>
    <string name="dialog_timer_stop">Dừng tính giờ</string>
    <string name="dialog_timer_cancel">Hủy bỏ</string>
    <string name="dialog_timer_timeend">120 Phút</string>
    <string name="dialog_timer_timebegin">0 Phút</string>
    <string name="dialog_timer_message">Sau 0 Phut ung dung se tu dong tat nhac</string>
    <string name="btn_home_text">Video</string>
    <string name="btn_home_download_text">Đang tải về</string>
    <string name="btn_home_search_text">Tìm bài hát</string>
    <string name="btn_home_ranker_text">Bảng xếp hạng</string>
    <string name="tv_home_online_text">Online</string>
    <string name="item_home_offline">Offline</string>
    <string name="item_home_online">Online</string>
    <string name="btn_home_top100_text">Top 100</string>
</resources>
