<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="180dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tvDialogName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dialog_text_name"
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtDialogPlaylistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/dialog_editext_hint"
        android:inputType="text"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogName" />

    <Button
        android:id="@+id/btnDialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button_text_cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnDialogCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button_text_create"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/viewLeft"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorLightBlue" />

    <View
        android:id="@+id/viewRight"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorLightBlue"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/viewTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightBlue"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightBlue"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>
