<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeActivity">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/colorLightBlue80"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/home_theme_music"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:background="@color/colorTransparent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleViewHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            app:layout_anchorGravity="bottom"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clHomeMiniBar"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="bottom"
            android:background="@color/colorWhite"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imgHomeQuickplayer"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_quickplayer_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Button
                android:id="@+id/btnPlayingListMiniBar"
                android:layout_width="@dimen/minibar_size_button"
                android:layout_height="@dimen/minibar_size_button"
                android:layout_marginRight="15dp"
                android:background="@drawable/ic_btn_minibar_playinglist"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/imgHomeQuickplayer"
                app:layout_constraintVertical_bias="0.9" />

            <Button
                android:id="@+id/btnNextMiniBar"
                android:layout_width="@dimen/minibar_size_button"
                android:layout_height="@dimen/minibar_size_button"
                android:layout_marginRight="15dp"
                android:background="@drawable/ic_btn_minibar_next_normal"
                app:layout_constraintRight_toLeftOf="@id/btnPlayingListMiniBar"
                app:layout_constraintTop_toTopOf="@id/btnPlayingListMiniBar" />

            <Button
                android:id="@+id/btnPlayMiniBar"
                android:layout_width="@dimen/minibar_size_button"
                android:layout_height="@dimen/minibar_size_button"
                android:layout_marginRight="15dp"
                android:background="@drawable/ic_btn_minibar_play_normal"
                app:layout_constraintRight_toLeftOf="@id/btnNextMiniBar"
                app:layout_constraintTop_toTopOf="@id/btnPlayingListMiniBar" />

            <TextView
                android:id="@+id/tvCurrentTimeMiniBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/minibar_time_default"
                app:layout_constraintBottom_toTopOf="@id/btnPlayingListMiniBar"
                app:layout_constraintLeft_toLeftOf="@id/btnPlayMiniBar"
                app:layout_constraintRight_toRightOf="@id/btnPlayingListMiniBar"
                app:layout_constraintTop_toTopOf="@id/imgHomeQuickplayer" />

            <TextView
                android:id="@+id/tvNameSongMiniBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/home_minibar_test_name_song"
                android:textColor="@color/colorBlack"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/imgHomeQuickplayer"
                app:layout_constraintRight_toLeftOf="@id/btnPlayMiniBar"
                app:layout_constraintTop_toTopOf="@id/imgHomeQuickplayer" />

            <TextView
                android:id="@+id/tvNameSingerMiniBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/home_minibar_test_name_author"
                app:layout_constraintLeft_toLeftOf="@+id/tvNameSongMiniBar"
                app:layout_constraintRight_toRightOf="@id/tvNameSongMiniBar"
                app:layout_constraintTop_toBottomOf="@id/tvNameSongMiniBar" />

            <ProgressBar
                android:id="@+id/progressBarMiniBar"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:progress="25"
                app:layout_constraintLeft_toLeftOf="@id/tvNameSongMiniBar"
                app:layout_constraintRight_toLeftOf="@id/btnPlayMiniBar"
                app:layout_constraintTop_toBottomOf="@+id/tvNameSingerMiniBar" />
        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clUserInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/colorWhite"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imgBannerDrawerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_baner_user_info" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ciAvatarUser"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:src="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@+id/imgBannerDrawerlayout"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/home_drawerlayout_text_Login"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/ciAvatarUser"
            app:layout_constraintLeft_toRightOf="@id/ciAvatarUser"
            app:layout_constraintTop_toTopOf="@id/ciAvatarUser" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBannerDrawerlayout">

            <Button
                android:id="@+id/btnMenuHomeSync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:text="@string/home_drawerlayout_wifi" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/black_30" />

            <Button
                android:id="@+id/btnMenuHomeTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:text="@string/home_drawerlayout_time_off" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/black_30" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:text="@string/home_drawerlayout_theme" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/black_30" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:text="@string/home_drawerlayout_app_review" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/black_30" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:text="@string/home_drawerlayout_app_infomation" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/black_30" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:text="@string/home_drawerlayout_more_app" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/black_30" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:text="@string/home_drawerlayout_help" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/black_30" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:text="@string/home_drawerlayout_setting" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.DrawerLayout>
