<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clLibraryPlaylistMinibar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/minibar_size_height">

        <TextView
            android:id="@+id/tvMinibarNumOfPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/minibar_item_text_playlist"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/minibar_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMiniBarTextViewEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/minibar_textview_edit"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/minibar_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnMiniBarEdit"
            android:layout_width="@dimen/minibar_size_button"
            android:layout_height="@dimen/minibar_size_button"
            android:layout_marginRight="5dp"
            android:background="@drawable/bt_mymusic_edit_rename_nor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tvMiniBarTextViewEdit"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMiniBarTextViewCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/minibar_text_create"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/minibar_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnMiniBarEdit"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="@dimen/minibar_size_button"
            android:layout_height="@dimen/minibar_size_button"
            android:layout_marginRight="5dp"
            android:background="@drawable/ic_add_new"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tvMiniBarTextViewCreate"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/black_50"
            app:layout_constraintBottom_toBottomOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleViewPlaylist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clLibraryPlaylistMinibar">

    </android.support.v7.widget.RecyclerView>
</android.support.constraint.ConstraintLayout>